# cpp_shogi

./: .gitignore  README.md  Untitled.ipynb
python/: Untitled.ipynb  generate_db.py  learn.py  memo  resnet.py  shogi  shogi.cpp  state.py  state_conversion.ipynb
python/muzero/: MuZeroExample.ipynb  MuZeroExample_1500iterations-fix01.ipynb  MuZeroExample_1500iterations.ipynb  MuZeroExample_Disection.ipynb  MuZeroExample_possible-fix01.ipynb  MuZeroExample_possible-fix02.ipynb  Reinforcement_Learning_MuZero.drawio  fix01_1500iter_training_log.txt  original_1500iter_training_log.txt
python/muzero/MuzeroPy/: MuzeroNetworks.ipynb  convert_string-to-tensor.ipynb
python/muzero/MuzeroPy/.ipynb_checkpoints/: MuzeroNetworks-checkpoint.ipynb
src/: CMakeLists.txt  Makefile  attack.cpp  attack.hpp  bit.cpp  bit.hpp  common.cpp  common.hpp  eval.cpp  eval.hpp  example.cpp  game.cpp  game.hpp  gen.cpp  gen.hpp  hand.cpp  hand.hpp  hash.cpp  hash.hpp  learn.cpp  learn.hpp  libmy.cpp  libmy.hpp  list.hpp  main.cpp  mate_search.cpp  math.cpp  math.hpp  move.cpp  move.hpp  nn.cpp  nn.hpp  pos.cpp  pos.hpp  score.cpp  score.hpp  search.cpp  search.hpp  selfplay.cpp  selfplay.hpp  (+12 more)
src/cpp/: CMakeLists.txt  attack.cpp  attack.hpp  bit.hpp  common.cpp  common.hpp  eval.cpp  eval.hpp  game.hpp  hash.cpp  hash.hpp  learn.cpp  learn.hpp  libmy.cpp  list.hpp  main.cpp  mate_search.cpp  mate_search.hpp  move.hpp  nn.cpp  nn.hpp  pos.cpp  py_module.py  search.cpp  search.hpp  selfplay.cpp  selfplay.hpp  sfen.cpp  sfen.hpp  tt.hpp  uct.cpp  uct.hpp  util.cpp  util.hpp
src/lib/: CMakeLists.txt  libmain.cpp  nn.cpp  nn.hpp
tool/: apply_filter.py  csa2sfen_conv.py
